--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@story-protocol/core-sdk": "^1.3.0-beta.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
+    "pinata-web3": "^0.5.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.23.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
