--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@story-protocol/core-sdk": "^1.3.0-beta.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "pinata-web3": "^0.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
     "viem": "^2.23.5"
   },
   "devDependencies": {
